--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -21,6 +21,7 @@ Change Log
       arrays, meaning they support UTF-8.
     - Various changes in Text class to support UTF-8.
     - Changed parameters to GraphicsUnclipped::drawText() (and subclasses).
+    - Added StringIterator class, for efficient iteration over a UTF-8 string.
 	
   V0.43 (20091223)
   
