- Fixed a crash in GraphicsPort::drawText() when trying to draw text outside the clipRect with a PackedFont1 font; should provide a minor speedup.  - More ScrollingPanel fixes.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -31,6 +31,8 @@ Change Log
     - Fixed FileRequester layout.
     - Replaced magic number double click time with define in woopsifuncs.cpp.
     - TestPanel class in scrolltest example draws its border correctly.
+    - Fixed a crash in GraphicsPort::drawText() when trying to draw text outside
+      the clipRect with a PackedFont1 font; should provide a minor speedup.
     
   New Features:
     - Added FontBase::getCharHeight().
