--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -15,6 +15,7 @@ Change Log
     - D-pad up/down move cursor up/down in MultiLineTextBox.
     - MultiLineTextBox shows keyboard when double-clicked.
     - MultiLineTextBox scrolls to follow cursor when moved with the d-pad.
+    - Built with devkitARM r28.
 
   V0.45 (20100219)
   
