- Progress bar optionally shows percentage completed.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -29,6 +29,7 @@ Change Log
       implement the same methods.
     - Added ListBoxBase interface to ensure that all ListBox-style classes
       implement the same methods.
+    - Progress bar optionally shows percentage completed.
 
   V0.45 (20100219)
   
