- Replaced ScreenTitle class with more elaborate drawing code in AmigaScreen class.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -16,6 +16,8 @@ Change Log
     - Graphics::scroll() returns correctly-sized rects in revealed rects array.
     - Replaced WindowBorderBottom, WindowBorderTop and WindowBorderSide classes
       with more elaborate drawing code in AmigaWindow class.
+    - Replaced ScreenTitle class with more elaborate drawing code in AmigaScreen
+      class.
 
   - New Features:
     - Added x and y parameters to Gadget::stopDragging().
