- ScrollingListBox raises value changed, action, click, release and release outside events correctly.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -20,7 +20,8 @@ Change Log
       class.
     - Made ScrollableBase a base class of ScrollingTextBox; implemented all pure
       virtual functions.
-    - ScrollingListBox raises value changed and action events correctly.
+    - ScrollingListBox raises value changed, action, click, release and release
+      outside events correctly.
 
   - New Features:
     - Added x and y parameters to Gadget::stopDragging().
