--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,7 +1,7 @@
 Change Log
 ----------
 
-  V0.48
+  V0.99
   
   - Fixes:
     - ProgressBar text greyed out when disabled.
@@ -19,6 +19,7 @@ Change Log
     - Added scrollbarvertical test.
     - Added scrollbarhorizontal test.
     - Added superbitmap test.
+    - Bumped version number to indicate feature completeness.
 
   V0.47 (20100510)
   
